@@ -1,44 +1,32 @@
-package com.example.User_server.model;
+package com.example.Logging_server.model;
 
-import jakarta.persistence.*;
 import lombok.*;
+import org.springframework.context.support.BeanDefinitionDsl;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
-@Entity
 @Builder
 @Getter
 @Setter
 @NoArgsConstructor
 @AllArgsConstructor
-@Table(name = "users")
+
 public class User implements UserDetails {
-    @Id
-    @Column(name = "id")
-    @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "user_id_seq")
-    @SequenceGenerator(name = "user_id_seq", sequenceName = "user_id_seq", allocationSize = 1)
     private Long id;
-    @Column(name = "firstname", nullable = false)
     private String firstname;
-    @Column(name = "surname", nullable = false)
     private String surname;
-    @Column(name = "lastname")
     private String lastname;
-    @Enumerated(EnumType.STRING)
-    @Column(name = "role", nullable = false)
-    private Role role;
-    @Column(name = "login", unique = true, nullable = false)
+    private BeanDefinitionDsl.Role role;
     private String username;
-    @Column(name = "password", nullable = false)
     private String password;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        return Collections.singletonList(new SimpleGrantedAuthority(role.name()));
     }
 
     @Override
@@ -61,3 +49,4 @@ public class User implements UserDetails {
         return true;
     }
 }
+
